end header add icons of header, tart main whit the cards

--- a/index.html
+++ b/index.html
@@ -7,10 +7,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Boolando</title>
+    <script src="https://kit.fontawesome.com/710259c6f3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- start header -->
+    <header class="containerh">
+        <div class="menu">
+            <a href="#">Uomo</a>
+            <a href="#">Donna</a>
+            <a href="#">Bambino</a>
+        </div>
+        <div class="logo">
+            <img src="./img/boolean-logo.png" alt="Logo Boolean">
+        </div>
+        <div class="icon">
+            <i class="fa-solid fa-user"></i>
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-bag-shopping"></i>
+        </div>
+    </header>
+    <!-- end header -->
 
+    <main>
+        <section class="container">
+            <div class="card">
+                <img src="" alt="">
+                <p></p>
+                <h3></h3>
+                <span>
+                    <p></p>
+                </span>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
