--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#">Bambino</a>
         </div>
         <div class="logo">
-            <img src="./img/boolean-logo.png" alt="Logo Boolean">
+            <img id="boolean" src="./img/boolean-logo.png" alt="Logo Boolean">
         </div>
         <div class="icon">
             <i class="fa-solid fa-user"></i>
@@ -32,12 +32,47 @@
     <main>
         <section class="container">
             <div class="card">
-                <img src="" alt="">
-                <p></p>
-                <h3></h3>
-                <span>
-                    <p></p>
-                </span>
+                <img src="./img/1.webp" alt="Uomo Levi's">
+                <p>Levi's</p>
+                <h3>RELAXED FIT TEE UNISEX</h3>
+                <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
+                <span class="sales">-50%</span>
+                <span class="eco">Sostenibilità</span>
+            </div>
+            <div class="card">
+                <img src="./img/2.webp" alt="Uomo Levi's">
+                <p>Levi's</p>
+                <h3>RELAXED FIT TEE UNISEX</h3>
+                <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
+                <span class="sales">-30%</span>
+            </div>
+            <div class="card">
+                <img id="error" src="./img/3.webp" alt="Uomo Levi's">
+                <p>Levi's</p>
+                <h3>RELAXED FIT TEE UNISEX</h3>
+                <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
+                <span class="sales">-30%</span>
+            </div>
+            <div class="card">
+                <img src="./img/4.webp" alt="Uomo Levi's">
+                <p>Levi's</p>
+                <h3>RELAXED FIT TEE UNISEX</h3>
+                <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
+                <span class="sales">-50%</span>
+                <span class="eco">Sostenibilità</span>
+            </div>
+            <div class="card">
+                <img src="./img/5.webp" alt="Uomo Levi's">
+                <p>Levi's</p>
+                <h3>RELAXED FIT TEE UNISEX</h3>
+                <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
+            </div>
+            <div class="card">
+                <img src="./img/6.webp" alt="Uomo Levi's">
+                <p>Levi's</p>
+                <h3>RELAXED FIT TEE UNISEX</h3>
+                <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
+                <span class="eco">Sostenibilità</span>
             </div>
         </section>
     </main>
