end structure of main now add corrert images and text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </header>
     <!-- end header -->
-
+    <!-- strat main whit six cards -->
     <main>
         <section class="container">
             <div class="card">
@@ -36,43 +36,62 @@
                 <p>Levi's</p>
                 <h3>RELAXED FIT TEE UNISEX</h3>
                 <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
-                <span class="sales">-50%</span>
-                <span class="eco">Sostenibilità</span>
+                <span class="heart">&hearts;</span>
+                <div class="colors">
+                    <span class="sales">-50%</span>
+                    <span class="eco"><strong>Sostenibilità</strong></span>
+                </div>
             </div>
             <div class="card">
                 <img src="./img/2.webp" alt="Uomo Levi's">
                 <p>Levi's</p>
                 <h3>RELAXED FIT TEE UNISEX</h3>
                 <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
-                <span class="sales">-30%</span>
+                <span class="heart">&hearts;</span>
+                <div class="colors">
+                    <span class="sales">-30%</span>
+                </div>
             </div>
             <div class="card">
                 <img id="error" src="./img/3.webp" alt="Uomo Levi's">
                 <p>Levi's</p>
                 <h3>RELAXED FIT TEE UNISEX</h3>
                 <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
-                <span class="sales">-30%</span>
+                <span class="heart">&hearts;</span>
+                <div class="colors">
+                    <span class="sales">-30%</span>
+                </div>
             </div>
             <div class="card">
                 <img src="./img/4.webp" alt="Uomo Levi's">
                 <p>Levi's</p>
                 <h3>RELAXED FIT TEE UNISEX</h3>
                 <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
-                <span class="sales">-50%</span>
-                <span class="eco">Sostenibilità</span>
+                <span class="heart">&hearts;</span>
+                <div class="colors">
+                    <span class="sales">-50%</span>
+                    <span class="eco"><strong>Sostenibilità</strong></span>
+                </div>
             </div>
             <div class="card">
                 <img src="./img/5.webp" alt="Uomo Levi's">
                 <p>Levi's</p>
                 <h3>RELAXED FIT TEE UNISEX</h3>
-                <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
+                <span class="red"><strong>14,99€</strong></span>
+                <span class="cut">29,99€</span>
+                <span class="heart">&hearts;</span>
             </div>
             <div class="card">
                 <img src="./img/6.webp" alt="Uomo Levi's">
                 <p>Levi's</p>
                 <h3>RELAXED FIT TEE UNISEX</h3>
-                <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
-                <span class="eco">Sostenibilità</span>
+                <span class="red"><strong>14,99€</strong></span>
+                <span class="cut">29,99€</span>
+                <span class="heart">&hearts;</span>
+                <div class="colors">
+                    <span class="eco"><strong>Sostenibilità</strong></span>
+                </div>
+
             </div>
         </section>
     </main>
