--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             </div>
             <div class="card">
                 <img src="./img/2.webp" alt="Uomo Levi's">
-                <p>Levi's</p>
-                <h3>RELAXED FIT TEE UNISEX</h3>
-                <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
+                <p>Guess</p>
+                <h3>ROSES TEE</h3>
+                <span class="red"><strong>20,99€</strong></span> <span class="cut">29,99€</span>
                 <span class="heart">&hearts;</span>
                 <div class="colors">
                     <span class="sales">-30%</span>
@@ -54,9 +54,9 @@
             </div>
             <div class="card">
                 <img id="error" src="./img/3.webp" alt="Uomo Levi's">
-                <p>Levi's</p>
-                <h3>RELAXED FIT TEE UNISEX</h3>
-                <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
+                <p>Come zucchero filato</p>
+                <h3>VOGLIA DI COLORI PASETELLO</h3>
+                <span class="red"><strong>129,99€</strong></span> <span class="cut">184,99€</span>
                 <span class="heart">&hearts;</span>
                 <div class="colors">
                     <span class="sales">-30%</span>
@@ -65,7 +65,7 @@
             <div class="card">
                 <img src="./img/4.webp" alt="Uomo Levi's">
                 <p>Levi's</p>
-                <h3>RELAXED FIT TEE UNISEX</h3>
+                <h3>TEE UNISEX</h3>
                 <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
                 <span class="heart">&hearts;</span>
                 <div class="colors">
@@ -75,18 +75,16 @@
             </div>
             <div class="card">
                 <img src="./img/5.webp" alt="Uomo Levi's">
-                <p>Levi's</p>
-                <h3>RELAXED FIT TEE UNISEX</h3>
+                <p>Maya Deluxe</p>
+                <h3>STRIPE BODICE</h3>
                 <span class="red"><strong>14,99€</strong></span>
-                <span class="cut">29,99€</span>
                 <span class="heart">&hearts;</span>
             </div>
             <div class="card">
                 <img src="./img/6.webp" alt="Uomo Levi's">
-                <p>Levi's</p>
-                <h3>RELAXED FIT TEE UNISEX</h3>
+                <p>Esprit</p>
+                <h3>MAGLIONE - BALCK</h3>
                 <span class="red"><strong>14,99€</strong></span>
-                <span class="cut">29,99€</span>
                 <span class="heart">&hearts;</span>
                 <div class="colors">
                     <span class="eco"><strong>Sostenibilità</strong></span>
