--- a/index.html
+++ b/index.html
@@ -93,6 +93,25 @@
             </div>
         </section>
     </main>
+    <footer>
+        <section class="containerf">
+            <div>
+                <h3>Boolando s.r.l.</h3>
+                <a href="#">Informazioni Legali</a>
+                <a href="#">Informativa sulla privacy</a>
+                <a href="#">Diritto di recesso</a>
+            </div>
+            <div id="social">
+                <h3>Trovaci anche su</h3>
+                <span>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                </span>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
