--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <section class="container">
             <div class="card">
                 <img src="./img/1.webp" alt="Uomo Levi's">
+                <img id="one" src="./img/1b.webp" alt="Uomo levi's 2">
                 <p>Levi's</p>
                 <h3>RELAXED FIT TEE UNISEX</h3>
                 <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
@@ -44,6 +45,7 @@
             </div>
             <div class="card">
                 <img src="./img/2.webp" alt="Uomo Levi's">
+                <img id="two" src="./img/2b.webp" alt="donna guess 2">
                 <p>Guess</p>
                 <h3>ROSES TEE</h3>
                 <span class="red"><strong>20,99€</strong></span> <span class="cut">29,99€</span>
@@ -54,6 +56,7 @@
             </div>
             <div class="card">
                 <img id="error" src="./img/3.webp" alt="Uomo Levi's">
+                <img id="three" src="./img/3b.webp" alt="donna du zucchero">
                 <p>Come zucchero filato</p>
                 <h3>VOGLIA DI COLORI PASETELLO</h3>
                 <span class="red"><strong>129,99€</strong></span> <span class="cut">184,99€</span>
@@ -64,6 +67,7 @@
             </div>
             <div class="card">
                 <img src="./img/4.webp" alt="Uomo Levi's">
+                <img id="four" src="./img/4b.webp" alt="uomo levi's 2">
                 <p>Levi's</p>
                 <h3>TEE UNISEX</h3>
                 <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
@@ -75,6 +79,7 @@
             </div>
             <div class="card">
                 <img src="./img/5.webp" alt="Uomo Levi's">
+                <img id="five" src="./img/5b.webp" alt="donna maya 2">
                 <p>Maya Deluxe</p>
                 <h3>STRIPE BODICE</h3>
                 <span class="red"><strong>14,99€</strong></span>
@@ -82,6 +87,7 @@
             </div>
             <div class="card">
                 <img src="./img/6.webp" alt="Uomo Levi's">
+                <img id="six" src="./img/6b.webp" alt="">
                 <p>Esprit</p>
                 <h3>MAGLIONE - BALCK</h3>
                 <span class="red"><strong>14,99€</strong></span>
