--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
 
 <body>
     <!-- start header -->
-    <header class="containerh">
-        <div class="menu">
-            <a href="#">Uomo</a>
-            <a href="#">Donna</a>
-            <a href="#">Bambino</a>
-        </div>
-        <div class="logo">
-            <img id="boolean" src="./img/boolean-logo.png" alt="Logo Boolean">
-        </div>
-        <div class="icon">
-            <i class="fa-solid fa-user"></i>
-            <i class="fa-solid fa-heart"></i>
-            <i class="fa-solid fa-bag-shopping"></i>
-        </div>
+    <header>
+        <section class="containerh">
+            <div class="menu">
+                <a href="#">Uomo</a>
+                <a href="#">Donna</a>
+                <a href="#">Bambino</a>
+            </div>
+            <div class="logo">
+                <img id="boolean" src="./img/boolean-logo.png" alt="Logo Boolean">
+            </div>
+            <div class="icon">
+                <i class="fa-solid fa-user"></i>
+                <i class="fa-solid fa-heart"></i>
+                <i class="fa-solid fa-bag-shopping"></i>
+            </div>
+        </section>
+
     </header>
     <!-- end header -->
     <!-- strat main whit six cards -->
