--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <main>
         <section class="container">
             <div class="card">
-                <img src="./img/1.webp" alt="Uomo Levi's">
-                <img id="one" src="./img/1b.webp" alt="Uomo levi's 2">
+                <img class="pic2" src="./img/1b.webp" alt="Uomo levi's 2">
+                <img class="pic1" id="one" src="./img/1.webp" alt="Uomo Levi's">
                 <p>Levi's</p>
                 <h3>RELAXED FIT TEE UNISEX</h3>
                 <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
@@ -47,8 +47,8 @@
                 </div>
             </div>
             <div class="card">
-                <img src="./img/2.webp" alt="Uomo Levi's">
-                <img id="two" src="./img/2b.webp" alt="donna guess 2">
+                <img class="pic2" src="./img/2b.webp" alt="donna guess 2">
+                <img class="pic1" id="two" src="./img/2.webp" alt="Uomo Levi's">
                 <p>Guess</p>
                 <h3>ROSES TEE</h3>
                 <span class="red"><strong>20,99€</strong></span> <span class="cut">29,99€</span>
@@ -58,8 +58,8 @@
                 </div>
             </div>
             <div class="card">
-                <img id="error" src="./img/3.webp" alt="Uomo Levi's">
-                <img id="three" src="./img/3b.webp" alt="donna du zucchero">
+                <img class="pic2" src="./img/3b.webp" alt="donna du zucchero">
+                <img class="pic1" id="three" src="./img/3.webp" alt="Uomo Levi's">
                 <p>Come zucchero filato</p>
                 <h3>VOGLIA DI COLORI PASETELLO</h3>
                 <span class="red"><strong>129,99€</strong></span> <span class="cut">184,99€</span>
@@ -69,8 +69,8 @@
                 </div>
             </div>
             <div class="card">
-                <img src="./img/4.webp" alt="Uomo Levi's">
-                <img id="four" src="./img/4b.webp" alt="uomo levi's 2">
+                <img class="pic2" src="./img/4b.webp" alt="uomo levi's 2">
+                <img class="pic1" id="four" src="./img/4.webp" alt="Uomo Levi's">
                 <p>Levi's</p>
                 <h3>TEE UNISEX</h3>
                 <span class="red"><strong>14,99€</strong></span> <span class="cut">29,99€</span>
@@ -81,16 +81,16 @@
                 </div>
             </div>
             <div class="card">
-                <img src="./img/5.webp" alt="Uomo Levi's">
-                <img id="five" src="./img/5b.webp" alt="donna maya 2">
+                <img class="pic2" src="./img/5b.webp" alt="donna maya 2">
+                <img class="pic1" id="five" src="./img/5.webp" alt="Uomo Levi's">
                 <p>Maya Deluxe</p>
                 <h3>STRIPE BODICE</h3>
                 <span class="red"><strong>14,99€</strong></span>
                 <span class="heart">&hearts;</span>
             </div>
             <div class="card">
-                <img src="./img/6.webp" alt="Uomo Levi's">
-                <img id="six" src="./img/6b.webp" alt="">
+                <img class="pic2" src="./img/6b.webp" alt="">
+                <img class="pic1" id="six" src="./img/6.webp" alt="Uomo Levi's">
                 <p>Esprit</p>
                 <h3>MAGLIONE - BALCK</h3>
                 <span class="red"><strong>14,99€</strong></span>
