--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
                 <span class="heart">&hearts;</span>
             </div>
             <div class="card">
-                <img class="pic2" src="./img/6b.webp" alt="">
-                <img class="pic1" id="six" src="./img/6.webp" alt="Uomo Levi's">
+                <div class="container-img">
+                    <img class="pic2" src="./img/6b.webp" alt="">
+                    <img class="pic1" id="six" src="./img/6.webp" alt="Uomo Levi's">
+                </div>
                 <p>Esprit</p>
                 <h3>MAGLIONE - BALCK</h3>
                 <span class="red"><strong>14,99€</strong></span>
